# goit-web-hm-11

./: .env  Dockerfile  docker-compose.yaml  pyproject.toml
app/: crud.py  database.py  main.py  models.py  schemas.py
